<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RickAndMorty-XML</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="retry_button_text">RETRY</string>
    <string name="content_description">null</string>
    <string name="couldnt_loaded_message">Couldn\'t loaded</string>
    <string name="isAliveSpecies">%1$s - %2$s</string>
    <string name="last_known_location">Last known location:</string>
    <string name="origin_text">Origin:</string>
    <string name="isAlive_species_text">Alive - Species</string>
    <string name="location">Citadel of Ricks</string>
    <string name="origin">The Ricklantis Mixup</string>
    <string name="name">Rick Sanchez</string>
    <string name="same_location">SAME LOCATION</string>
</resources>