<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/character_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    android:background="@drawable/rounded_card_background">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/character_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/character_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/isAliveDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/green_dot"
        app:layout_constraintStart_toStartOf="@+id/character_name"
        app:layout_constraintTop_toBottomOf="@+id/character_name" />

    <TextView
        android:id="@+id/isAliveAndSpecies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/isAlive_species_text"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/isAliveDot"
        app:layout_constraintEnd_toEndOf="@+id/character_name"
        app:layout_constraintStart_toEndOf="@+id/isAliveDot"
        app:layout_constraintTop_toTopOf="@+id/isAliveDot" />

    <TextView
        android:id="@+id/last_known_location_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/last_known_location"
        android:textColor="@color/on_dark_background"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/isAliveAndSpecies"
        app:layout_constraintStart_toStartOf="@+id/isAliveDot"
        app:layout_constraintTop_toBottomOf="@+id/isAliveAndSpecies" />

    <TextView
        android:id="@+id/last_known_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/last_known_location_text"
        app:layout_constraintStart_toStartOf="@+id/last_known_location_text"
        app:layout_constraintTop_toBottomOf="@+id/last_known_location_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/origin_text"
        android:textColor="@color/on_dark_background"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/last_known_location"
        app:layout_constraintStart_toStartOf="@+id/last_known_location"
        app:layout_constraintTop_toBottomOf="@+id/last_known_location" />

    <TextView
        android:id="@+id/origin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/origin"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>